# inferno

./: Cargo.toml
json/chapters/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  4.json  5.json  6.json  7.json  8.json  9.json
scripts/: txt2json.js
src/: main.rs
templates/: index.html.hbs
txt/chapters/en/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
txt/chapters/it/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
