[package]
name = "inferno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "5.1.2"
rocket = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["handlebars"]
